--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "lamtat-mcp-server"
 version = "0.1.0"
-description = "Minimal FastMCP server exposing a single process_data tool"
+description = "Minimal FastMCP server exposing simple MCP tools"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastmcp>=0.0.4",  # adjust version as needed
+    "fastmcp>=0.0.4",
+    "boto3>=1.35",
 ]
 
 [project.scripts]
