--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@ APP_NAME=lamtat-mcp-server
 HOST=0.0.0.0
 PORT=6565
 S3_BUCKET_NAME=lamtat-mcp-ingest
+AWS_REGION=ap-southeast-1
+BEDROCK_REGION=ap-southeast-1
+BEDROCK_MODEL_ID=global.cohere.embed-v4:0
+OPENSEARCH_ENDPOINT=
+OPENSEARCH_INDEX=knowledge-chunks
+CHUNK_SIZE=1000
+CHUNK_OVERLAP=100
