--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=0.0.4",
     "boto3>=1.35",
+    "opensearch-py>=2.6",
+    "docling>=0.0.12",
 ]
 
 [project.scripts]
