--- a/copilot/lamtat-mcp-server/manifest.yml
+++ b/copilot/lamtat-mcp-server/manifest.yml
@@ -12,7 +12,7 @@ http:
     path: '/health'
 
 cpu: 256
-memory: 2048
+memory: 4096
 count: 1
 
 env_file: .env
@@ -24,6 +24,8 @@ env:
   AWS_REGION: ap-southeast-1
   BEDROCK_REGION: ap-southeast-1
   BEDROCK_MODEL_ID: global.cohere.embed-v4:0
+  BEDROCK_OUTPUT_DIMENSION: 1024
+  BEDROCK_TRUNCATE: RIGHT
   OPENSEARCH_ENDPOINT: https://ymlac5k3rluil0a57oza.ap-southeast-1.aoss.amazonaws.com
   OPENSEARCH_INDEX: knowledge-chunks
   CHUNK_SIZE: 1000
