--- a/copilot/lamtat-mcp-server/manifest.yml
+++ b/copilot/lamtat-mcp-server/manifest.yml
@@ -25,7 +25,7 @@ env:
   BEDROCK_REGION: ap-southeast-1
   BEDROCK_MODEL_ID: cohere.embed-v4:0
   BEDROCK_OUTPUT_DIMENSION: 1024
-  BEDROCK_TRUNCATE: RIGHT
+  BEDROCK_TRUNCATE: END
   OPENSEARCH_ENDPOINT: https://ymlac5k3rluil0a57oza.ap-southeast-1.aoss.amazonaws.com
   OPENSEARCH_INDEX: knowledge-chunks
   CHUNK_SIZE: 1000
