--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dependencies = [
     "fastmcp>=0.0.4",
     "boto3>=1.35",
     "opensearch-py>=2.6",
-    "docling>=0.0.12",
+    "docling>=2.0,<3",
 ]
 
 [project.scripts]
